# rag-llm-langchain

./: .gitignore  1.langchain_llm_test.ipynb  1.langchain_llm_upstage.ipynb  2.1.rag_with_chroma_upstage.ipynb  2.rag_with_chroma.ipynb  3.rag_without_langchain_with_chroma.ipynb  4.rag_with_pinecone.ipynb  README.md  main.py  pyproject.toml  tax.docx
