[project]
name = "rag-llm-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "docx2txt>=0.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "langchain-upstage>=0.7.1",
    "langchainhub>=0.1.21",
    "openai>=1.98.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
